# oo-draughts

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
src/: main.cpp
src/board/: board.cpp  board.hpp  draughts_board.cpp  draughts_board.hpp  position.cpp  position.hpp
src/board/pieces/: empty_field.cpp  empty_field.hpp  king_pawn.cpp  king_pawn.hpp  normal_pawn.cpp  normal_pawn.hpp  pawn.cpp  pawn.hpp
src/input/: console_input.cpp  console_input.hpp
src/input/commands/: command.cpp  command.hpp  help_command.cpp  help_command.hpp  move_command.cpp  move_command.hpp  quit_command.cpp  quit_command.hpp
src/view/: console.cpp  console.hpp  console_view.cpp  console_view.hpp
